--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run bs | npm run watch | npm run sass",
-    "sass": "node-sass src/scss/styles.scss dist/css/styles.css -w src/scss",
+    "sass": "node-sass src/scss/styles.scss dist/css/styles.css && node-sass src/scss/styles.scss dist/css/styles.css -w src/scss",
     "bs": "browser-sync start --server --serveStatic 'dist' --files 'dist'",
     "partials": "html-include-comment src/index.html dist/index.html",
     "watch": "watch 'npm run partials' src --interval=0.1"
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.23.6",
+    "html-include-comment": "0.0.7",
     "node-sass": "^4.8.3",
     "watch": "^1.0.2"
   }
